--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'IBM Plex Sans KR', sans-serif;
+  font-family: 'Noto Sans KR';
 }
 
 .wrap {
@@ -21,7 +18,7 @@
   margin: -75px 0 0 -75px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #fadad8;
+  border-top: 16px solid #000000;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
@@ -48,53 +45,12 @@
   }
 }
 
-.head {
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-left: 5%;
-  padding-top: 1%;
-}
-
-.head a img {
-  width: 130px;
-}
-
-.head .hd {
-  padding-left: 20%;
-}
-
-.head .hd ul li {
-  list-style: none;
-  float: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  word-spacing: 100px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-weight: bold;
-}
-
-.head .hd ul li a {
-  text-decoration: none;
-  color: #ED9282;
-  font-size: 20px;
-  font-weight: 700;
-  margin: 50px 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 #menu {
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 30%;
+  padding-left: 25%;
   padding-top: 1%;
   position: fixed;
   top: 0;
@@ -112,8 +68,8 @@
 
 #menu img {
   position: relative;
-  margin-left: -790px;
-  width: 110px;
+  margin-left: -600%;
+  width: 120px;
 }
 
 #menu ul li {
@@ -132,12 +88,100 @@
 #menu ul li a {
   text-align: center;
   text-decoration: none;
-  color: #ED9282;
-  font-size: 20px;
+  color: black;
+  font-size: 18px;
   font-weight: 700;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 1300px) {
+  #menu {
+    padding-left: 38%;
+  }
+  #menu img {
+    position: relative;
+    margin-left: -790px;
+    width: 120px;
+  }
+  #menu ul {
+    display: none;
+  }
+}
+
+@media (max-width: 1150px) {
+  #menu {
+    padding-left: 42%;
+  }
+  #menu img {
+    position: relative;
+    margin-left: -790px;
+    width: 120px;
+  }
+}
+
+@media (max-width: 1000px) {
+  #menu {
+    padding-left: 48%;
+  }
+  #menu img {
+    position: relative;
+    margin-left: -790px;
+    width: 120px;
+  }
+}
+
+@media (max-width: 375px) {
+  #menu {
+    padding-left: 120%;
+  }
+  #menu img {
+    position: relative;
+    margin-top: 20px;
+    margin-left: -790px;
+    width: 100px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .nav-btn {
+    position: fixed;
+    right: 38px;
+    top: 35px;
+    z-index: 10000;
+    cursor: pointer;
+  }
+  .nav-btn span {
+    display: block;
+    width: 35px;
+    height: 3px;
+    background-color: #1f1e3e;
+    border-radius: 5px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  .nav-btn .bar2 {
+    margin: 7px 0;
+  }
+}
+
+header {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #fff;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 1000;
+}
+
+header .slide {
+  right: 50%;
 }
 
 .section {
@@ -145,23 +189,21 @@
 }
 
 .s0 {
-  padding-left: 100px;
+  padding-left: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.s0 h2 i {
+.s0 h2 {
   color: white;
-  font-size: 45px;
+  font-size: 3em;
   text-shadow: -1px 0 #333,  0 1px #333,  1px 0 #333,  0 -1px #333;
 }
 
 .s0 h3 {
-  font-size: 3em;
-  color: white;
-  text-transform: uppercase;
-  text-shadow: -1px 0 #333,  0 1px #333,  1px 0 #333,  0 -1px #333;
+  font-size: 4em;
+  color: black;
 }
 
 .s0 p {
@@ -194,59 +236,153 @@
 }
 
 .s0 img {
-  width: 30%;
+  width: 32%;
+  position: absolute;
+  left: 60%;
+  bottom: 15%;
+}
+
+.s0 .background img {
+  position: absolute;
+  width: 40px;
+}
+
+.s0 .background .html {
+  top: 80%;
+  left: 15%;
+  -webkit-animation: css 5s linear infinite;
+          animation: css 5s linear infinite;
+}
+
+.s0 .background .css {
+  top: 25%;
+  left: 35%;
+  -webkit-animation: html 5s linear infinite;
+          animation: html 5s linear infinite;
+}
+
+.s0 .background .js {
+  top: 64%;
+  left: 57%;
+  -webkit-animation: js 5s linear infinite;
+          animation: js 5s linear infinite;
+}
+
+.s0 .background .htmll {
+  top: 30%;
+  left: 67%;
+  -webkit-animation: html 5s linear infinite;
+          animation: html 5s linear infinite;
+}
+
+.s0 .background .csss {
+  top: 20%;
+  left: 85%;
+  -webkit-animation: css 5s linear infinite;
+          animation: css 5s linear infinite;
+}
+
+.s0 .background .jss {
+  top: 17%;
+  left: 15%;
+  -webkit-animation: html 5s linear infinite;
+          animation: html 5s linear infinite;
+}
+
+@-webkit-keyframes html {
+  50% {
+    margin-top: 30px;
+  }
+}
+
+@keyframes html {
+  50% {
+    margin-top: 30px;
+  }
+}
+
+@-webkit-keyframes css {
+  50% {
+    margin-top: -35px;
+  }
+}
+
+@keyframes css {
+  50% {
+    margin-top: -35px;
+  }
+}
+
+@-webkit-keyframes js {
+  50% {
+    margin-top: -30px;
+  }
+}
+
+@keyframes js {
+  50% {
+    margin-top: -30px;
+  }
 }
 
 .s1 section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 86vw;
-  margin: 0 auto;
-  padding: 25vh 0;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.s1 section > div:nth-of-type(1) {
-  width: 50%;
-}
-
-.s1 section > div:nth-of-type(2) {
-  width: 40%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  left: -100px;
 }
 
 .s1 div h2 {
   text-align: center;
   padding-bottom: 10px;
-  color: white;
-  font-size: 20px;
-  text-shadow: -1px 0 #333,  0 1px #333,  1px 0 #333,  0 -1px #333;
+  color: black;
+  font-size: 25px;
+  line-height: 25px;
 }
 
 .s1 div video {
-  width: 100%;
-  padding-left: 110px;
-  padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  width: 15%;
+  height: 12%;
+  left: -100px;
+  padding-top: 420px;
+  -webkit-transform: rotate(330deg);
+          transform: rotate(330deg);
+}
+
+.s1 .video2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  height: 12%;
+  left: -50px;
+  padding-top: 580px;
+  -webkit-transform: rotate(330deg);
+          transform: rotate(330deg);
 }
 
 .s1 img {
-  width: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 35%;
   -webkit-transform: rotate(330deg);
           transform: rotate(330deg);
   position: absolute;
-  left: 560px;
-  top: 330px;
+  left: -200px;
+  top: 160px;
 }
 
 .s1 div .about {
-  padding: 2% 0;
+  padding: 5% 0;
+  left: -100px;
 }
 
 .s1 div .skill {
@@ -261,8 +397,36 @@
   text-shadow: -1px 0 #333,  0 1px #333,  1px 0 #333,  0 -1px #333;
 }
 
-.s2 .port .site img {
-  width: 35%;
+.s2 .port .site {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  padding: 0 50px;
+}
+
+.s2 .port .site .fp img {
+  padding: 20px;
+  border-style: dashed;
+  border-color: black;
+  border-width: 5px;
+  width: 90%;
+}
+
+.s2 .port .site .sp img {
+  padding: 20px;
+  border-style: dashed;
+  border-color: black;
+  border-width: 5px;
+  width: 90%;
+}
+
+.s2 .port .site .tp img {
+  padding: 20px;
+  border-style: dashed;
+  border-color: black;
+  border-width: 5px;
+  width: 90%;
 }
 
 .s3 h2 {
@@ -276,16 +440,18 @@
 }
 
 .s3 .contact .thank a {
+  border-style: solid;
+  border-width: 8px;
   font-size: 3em;
   font-weight: bolder;
   text-decoration: underline;
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 20%;
   width: 70vw;
   height: 65vh;
   padding: 4.6rem 6rem;
-  background: #e5f0ff;
+  background: white;
 }
 
 .s3 .contact .thank .cje p {
@@ -296,10 +462,10 @@
   top: 400px;
 }
 
-.s3 .contact .thank .cje .fixed_pfo {
+.s3 .contact .thank .fixed_pfo {
   position: absolute;
   bottom: 0;
-  left: 10vw;
+  left: 3vw;
   padding: 3.2rem 10px;
   z-index: 100;
 }
