--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,13 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'IBM Plex Sans KR', sans-serif;
+    // box-sizing: border-box;
+    // font-family: 'Montserrat', sans-serif;
+     font-family: 'Noto Sans KR';
     
     
     }
-    // 로딩페이지
+    //------------------------------------로딩페이지
     // .loader{
     //     position: fixed;
     //     left: 0px;
@@ -26,7 +26,7 @@
         margin: -75px 0 0 -75px; 
         border: 16px solid #f3f3f3; 
         border-radius: 50%; 
-        border-top: 16px solid #fadad8; 
+        border-top: 16px solid #000000; 
         width: 120px; height: 120px; 
         -webkit-animation: spin 2s linear infinite; 
         animation: spin 2s linear infinite; 
@@ -37,45 +37,54 @@
     @keyframes spin { 0% { transform: rotate(0deg); 
     } 100% { transform: rotate(360deg); } }
 
-    // 상단메뉴
-    .head{
-        text-align: center;
-        display: flex;
-        padding-left: 5%;
-        padding-top: 1%;
-        a img{
-            width: 130px;
-        }
-        .hd{
-            padding-left: 20%;
-            ul{
-                li{
-                    list-style: none;
-                    float: left;
-                    display: flex;
-                    word-spacing: 100px;
-                    justify-content: center;
-                    font-weight: bold;
-                
-                    a{
-                        text-decoration: none;
-                        color: #ED9282;
-                        font-size: 20px;
-                        font-weight:700;
-                        margin: 50px 100px;
-                        display: flex;
-                        
-                    }
-                }
-            }
-        }
-    }
+    //------------------------------------ 상단메뉴
 
-    //포트폴리오 시작 
+    // .head{
+    //     text-align: center;
+    //     display: flex;
+    //     padding-left: 5%;
+    //     padding-top: 1%;
+    //     a img{
+    //         width: 130px;
+    //     }
+    //     .hd{
+    //         padding-left: 20%;
+    //         ul{
+    //             li{
+    //                 list-style: none;
+    //                 float: left;
+    //                 display: flex;
+    //                 word-spacing: 100px;
+    //                 justify-content: center;
+    //                 font-weight: bold;
+                    
+                
+    //                 a{
+    //                     text-decoration: none;
+    //                     // color: #ED9282;
+    //                     // font-size: 20px;
+    //                     // font-weight:700;
+    //                     margin: 50px 100px;
+    //                     display: flex;
+    //                     color: white;
+    //                     font-size: 2em;
+    //                     text-shadow: 
+    //                     -1px 0 #333, 
+    //                     0 1px #333, 
+    //                     1px 0 #333, 
+    //                     0 -1px #333;
+                        
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
+
+    //------------------------------------포트폴리오 시작 
     #menu{
         text-align: center;
         display: flex;
-        padding-left: 30%;
+        padding-left: 25%;
         padding-top: 1%;
         position:fixed;
         top:0;
@@ -85,11 +94,12 @@
         justify-content: space-between;
         box-sizing: border-box;
         img{
-            position: relative;;
-            // margin-left: -900%;
-            margin-left:-790px;
+            position: relative;
+            margin-left: -600%;
+            // margin-left:-790px;
+
             // margin-bottom: 100px;
-            width: 110px;
+            width: 120px;
         }
         ul{
             li{
@@ -103,31 +113,126 @@
                 a{
                     text-align: center;
                     text-decoration: none;
-                    color: #ED9282;
-                    font-size: 20px;
+                    // color: #ED9282;
+                    color: black;
+                    font-size: 18px;
                     font-weight:700;
                     // margin: 40px 0px;
                     display: flex;
+                    // text-shadow: 
+                    // -1px 0 #333, 
+                    // 0 1px #333, 
+                    // 1px 0 #333, 
+                    // 0 -1px #333;
+                    
                     
                 }
             }
         }
     }
+    @media (max-width:1300px){
+        #menu{
+            padding-left: 38%;
+            img{
+                position: relative;
+                // margin-left: -900%;
+                margin-left:-790px;
+                // margin-bottom: 100px;
+                width: 120px;
+            }
+            ul{
+                display: none;
+            }
+        }
+           
+    }
 
+    @media (max-width:1150px){
+        #menu{
+            padding-left: 42%;
+            img{
+                position: relative;
+                // margin-left: -900%;
+                margin-left:-790px;
+                // margin-bottom: 100px;
+                width: 120px;
+            }
+        }
+    }
+
+    @media (max-width:1000px){
+        #menu{
+            padding-left: 48%;
+            img{
+                position: relative;
+                // margin-left: -900%;
+                margin-left:-790px;
+                // margin-bottom: 100px;
+                width: 120px;
+            }
+        }
+    }
+    @media (max-width:375px){
+        #menu{
+            padding-left: 120%;
+            img{
+                position: relative;
+                // margin-left: -900%;
+                margin-top:20px;
+                margin-left:-790px;
+                // margin-bottom: 100px;
+                width: 100px;
+            }
+        }
+    }
+// ------------------------------------우측 메뉴 버튼(반응형)
+    @media (max-width:1300px){
+        .nav-btn {
+            position: fixed;
+            right: 38px;
+            top: 35px;
+            z-index: 10000;
+            cursor: pointer;
+            span {
+                display: block;
+                width: 35px;
+                height: 3px;
+                background-color: #1f1e3e;
+                border-radius: 5px;
+                transition: 0.3s;
+            }
+            .bar2 {
+                margin: 7px 0;
+            }
+        }
+    }
+    header {
+        width: 100%;
+        margin: 0 auto;
+        background-color: #fff;
+        position: fixed;
+        right: -50%;
+        top: 0;
+        transform: translateX(50%);
+        transition: 0.3s;
+        z-index: 1000;
+        .slide{
+            right: 50%;
+        }
+    }
+
+    // ------------------------------------첫번째 페이지
     .section{
         text-align: left;
     }
 
     .s0{
-       padding-left: 100px;
-       display: flex;
-      
-    
-    
+       padding-left: 10%;
+       display: flex;    
 
-            h2 i{
+            h2 {
                 color: white;
-                font-size: 45px;
+                font-size: 3em;
                 text-shadow: 
                 -1px 0 #333, 
                 0 1px #333, 
@@ -135,31 +240,13 @@
                 0 -1px #333;
             }
             h3{
-                // color: white;
-                // font-size: 65px;
-                // text-shadow: 
-                // -1px 0 #333, 
-                // 0 1px #333, 
-                // 1px 0 #333, 
-                // 0 -1px #333;
-                font-size: 3em;
-                color: white;
-                text-transform: uppercase;
-                text-shadow: 
-                -1px 0 #333, 
-                0 1px #333, 
-                1px 0 #333, 
-                0 -1px #333;
+                font-size: 4em;
+                color: rgb(0, 0, 0);        
             }
             p{
                 font-size: 25px;
                 line-height: 50px;
                 color: #767d8b;
-                // text-shadow: 
-                // -1px 0 #333, 
-                // 0 1px #333, 
-                // 1px 0 #333, 
-                // 0 -1px #333;
                 .highlight{
                     display:inline-table;
                     position:relative;
@@ -178,65 +265,135 @@
                         
                     }
                 }
+                
             }
-            // &:hover .highlight::after{left:0;}
             img{
-                width: 30%;
+                width: 32%;
+                position: absolute;
+                left: 60%;
+                bottom: 15%;
+                
             }
-           
+            .background{
+                img{
+                    position: absolute;
+                    width: 40px;
+                    
+                }
+                .html{
+                    top: 80%;
+                    left: 15%;
+                    animation: css 5s linear infinite;
+                }
+                .css{
+                    
+                    top: 25%;
+                    left: 35%;
+                    animation: html 5s linear infinite;
+                }
+                .js{
+                    top:64%;
+                    left: 57%;
+                    animation: js 5s linear infinite;
+                    
+                }
+                .htmll{
+                    top: 30%;
+                    left: 67%;
+                    animation: html 5s linear infinite;
+                }
+                .csss{
+                    top: 20%;
+                    left: 85%;
+                    animation: css 5s linear infinite;
+                }
+                .jss{
+                    top:17%;
+                    left: 15%;
+                    animation: html 5s linear infinite;
+                    
+                    
+                }
+            }
+            @keyframes html {
+                50% { margin-top:30px;  }
+            }
+           @keyframes css {
+            50% { margin-top:-35px;  }
+            }
+            @keyframes js {
+            50% { margin-top:-30px;  }
+            }
         }
-    
-    .s1{
-        // background-image: url('../photo/paper.jpg');
-        // background-size: cover;
-        
-        
+
+
+    // ------------------------------------두번째 페이지
+    .s1{        
         section{
             display: flex;
-            max-width: 86vw;
-            margin: 0 auto;
-            padding: 25vh 0;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+            // flex-direction: row;
+            justify-content: center;
+            left: -100px;
 
-            &>div:nth-of-type(1){width:50%}
-            &>div:nth-of-type(2){width:40%}
+            // &>div:nth-of-type(1){width:50%}
+            // &>div:nth-of-type(2){width:40%}
            
         }
         
             div h2{
                 text-align: center;
                 padding-bottom: 10px;
-                color: white;
-                font-size: 20px;
-                text-shadow: 
-                -1px 0 #333, 
-                0 1px #333, 
-                1px 0 #333, 
-                0 -1px #333;
+                color: rgb(0, 0, 0);
+                font-size: 25px;
+                line-height: 25px;
+                // text-shadow: 
+                // -1px 0 #333, 
+                // 0 1px #333, 
+                // 1px 0 #333, 
+                // 0 -1px #333;
             }
             div video{ 
-                width: 100%;
-                padding-left: 110px;
-                padding-top: 50px;
+                display: flex;
+                position: absolute;
+                width: 15%;
+                height: 12%;
+                // padding-left: 10px;
+                left: -100px;
+                padding-top: 420px;
+                transform: rotate(330deg);
+            }
+            .video2{
+                display: flex;
+                position: absolute;
+                // width: 15%;
+                height: 12%;
+                // padding-left: 10px;
+                left: -50px;
+                padding-top: 580px;
+                transform: rotate(330deg);
             }
             img{
-                width: 5%;
+                display: flex;
+                width: 35%;
                 transform: rotate(330deg);
                 // display: flex;
                 position: absolute;
-                left: 560px;
-                top:330px
+                left: -200px;
+                top:160px
             }
             div .about{
-            padding: 2% 0;
+            padding: 5% 0;
+            left: -100px;
+            
+            
             }
             div .skill{
                 padding: 2% 0;
             }
         }
 
+
+        // ------------------------------------세번째 페이지
         .s2{
             h2{
                 text-align: center;
@@ -251,12 +408,42 @@
             }
             .port{
                 .site{
-                    img{
-                        width: 35%;
+                    display: flex;
+                    text-align: center;
+                    padding: 0 50px;
+                    .fp{
+                        img{
+                            padding: 20px;
+                            border-style:dashed;
+                            border-color: black;
+                            border-width: 5px;
+                            width: 90%;
+                            
+                        }
+                    }
+                    .sp{
+                        img{
+                            padding: 20px;
+                            border-style: dashed;
+                            border-color: black;
+                            border-width: 5px;
+                            width: 90%;
+                        }
+                    }
+                    .tp{
+                        img{
+                            padding: 20px;
+                            border-style: dashed;
+                            border-color: black;
+                            border-width: 5px;
+                            width: 90%;
+                        }
                     }
                 }
             }
         }
+
+        // ------------------------------------네번째 페이지
         .s3{
             h2{
                 text-align: center;
@@ -274,17 +461,20 @@
             .contact{
                 
                 .thank{
-                    a{  font-size: 3em;
+                    a{  border-style: solid;
+                        border-width: 8px;
+                        font-size: 3em;
                         // font-weight: bold;
                         font-weight: bolder;
                         text-decoration: underline;
                         position: absolute;
                         bottom: 0;
-                        right: 0;
+                        left: 20%;
                         width: 70vw;
                         height: 65vh;
                         padding: 4.6rem 6rem;
-                        background: rgb(229, 240, 255);
+                        // background: rgb(229, 240, 255);
+                        background: rgb(255, 255, 255);
                         }
                         .cje{
                             
@@ -299,15 +489,15 @@
                                 
                                 
                             }
-                            .fixed_pfo{
-                                position: absolute;
-                                bottom: 0;
-                                left: 10vw;
-                                padding: 3.2rem 10px;
-                                z-index: 100;
-                            }
+                            
                     }
-                        
+                    .fixed_pfo{
+                        position: absolute;
+                        bottom: 0;
+                        left: 3vw;
+                        padding: 3.2rem 10px;
+                        z-index: 100;
+                    } 
                     
                 }
             }
