--- a/css/index.css
+++ b/css/index.css
@@ -178,10 +178,26 @@ header {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   z-index: 1000;
+  cursor: pointer;
 }
 
 header .slide {
   right: 50%;
+}
+
+header .slide ul {
+  display: block;
+  list-style-type: disc;
+  -webkit-margin-before: 1em;
+          margin-block-start: 1em;
+  -webkit-margin-after: 1em;
+          margin-block-end: 1em;
+  -webkit-margin-start: 0px;
+          margin-inline-start: 0px;
+  -webkit-margin-end: 0px;
+          margin-inline-end: 0px;
+  -webkit-padding-start: 40px;
+          padding-inline-start: 40px;
 }
 
 .section {
@@ -402,7 +418,12 @@ header .slide {
   display: -ms-flexbox;
   display: flex;
   text-align: center;
-  padding: 0 50px;
+  position: relative;
+  left: 10%;
+  width: 70vw;
+  height: 60vh;
+  padding: 3% 6rem;
+  border-style: solid;
 }
 
 .s2 .port .site .fp img {
