--- a/css/index.scss
+++ b/css/index.scss
@@ -216,8 +216,18 @@
         transform: translateX(50%);
         transition: 0.3s;
         z-index: 1000;
+        cursor: pointer;
         .slide{
             right: 50%;
+            ul {
+                display: block;
+                list-style-type: disc;
+                margin-block-start: 1em;
+                margin-block-end: 1em;
+                margin-inline-start: 0px;
+                margin-inline-end: 0px;
+                padding-inline-start: 40px;
+            }
         }
     }
 
@@ -410,7 +420,12 @@
                 .site{
                     display: flex;
                     text-align: center;
-                    padding: 0 50px;
+                    position: relative;
+                    left: 10%;
+                    width: 70vw;
+                    height: 60vh;
+                    padding: 3% 6rem;
+                    border-style: solid;
                     .fp{
                         img{
                             padding: 20px;
