--- a/slick-default/slick.css
+++ b/slick-default/slick.css
@@ -130,8 +130,8 @@
 }
 .slick-prev{left:0;}
 .slick-prev::after{
-    content:'MAROO ENTERPRISE';
-    background:url(../photo/visual_prev.png) no-repeat;
+    content:'';
+    /* background:url(../photo/visual_prev.png) no-repeat; */
     width:100%; height:180px;
     padding:15px 0 0 100px;
     display:block;
@@ -141,9 +141,9 @@
 }
 .slick-next{right:0;}
 .slick-next::after{
-    content:'Music&Artist Reader Of Originality';
+    content:'';
     /* content: ''; */
-    background:url(../photo/visual_next.png) no-repeat;
+    /* background:url(../photo/visual_next.png) no-repeat; */
     width:100%; height:180px;
     display: flex;
     padding:15px 100px 0 0;
@@ -171,12 +171,12 @@
     font-size: 0;
     padding:0; border:0;
     margin: 0 10px;
-    background-color: #70939c9a;
+    background-color: #000;
 } /* 원모양 */
 .slick-dots li.slick-active button{
     width:23px; height:5px;
     border-radius:10px;
-    background-color: rgb(255, 255, 255);
+    background-color: #000;
 }
 
 /* 슬라이드 이미지, 좌우버튼, 인디게이터 */
