--- a/css/index.scss
+++ b/css/index.scss
@@ -89,7 +89,7 @@
         position:fixed;
         top:0;
         left: 0;
-        z-index:990;
+        z-index:99999;
         align-items: center;
         justify-content: space-between;
         box-sizing: border-box;
@@ -235,6 +235,28 @@
     .section{
         text-align: left;
     }
+    #full-page{position:relative;
+        z-index:9999;}
+
+    .fix {
+        width: 80%;
+        // background:url('../photo/compp.png') no-repeat;
+        border:6px solid #000;
+        box-sizing: border-box;
+        height:73vh;
+        position:fixed;
+        left:10%; top:14%;
+        z-index:999;
+        pointer-events: none;
+    }
+    .fix.active {
+        animation: box 1s;
+    }
+    @keyframes box {
+        0%{width:80%;}
+        50%{width:100%; height:100vh; left:0; top:0; opacity: 0;}
+        100%{width:80%; opacity: 1;}
+    }
 
     .s0{
        padding-left: 10%;
@@ -365,17 +387,20 @@
         // left: -100px;
         margin: 10% 0;
         
+        
         section{
             display: flex;
             // flex-direction: row;
             justify-content: center;
             align-items: center;
+            height:100vh;
+            
             // left: -100px;
 
             // &>div:nth-of-type(1){width:50%}
             // &>div:nth-of-type(2){width:40%}
            
-        }
+        
         
             div h2{
                 text-align: center;
@@ -394,14 +419,14 @@
                 padding:0 30px;
                 background:url('../photo/squ.png')  0 0;
                 background-size: 44px;
-                transform:rotate(340deg);   
-                position: relative;
-                z-index: 1;
-                top:80px;
-                left: -50px;
-        
-
+                position: absolute;
+                z-index: 9999;
+                bottom:0px;
+                left: -2%;
+                transform:rotate(0deg) translate(-130%,-30%);
+                transition: .5s .7s;
             }
+            .films.active{transform: rotate(340deg) translate(0%,0);}
             .films figure{
                 height:105px;
                 background: #000;
@@ -422,91 +447,75 @@
                
             }
             
-            .film{
-                display: flex;
-                width: 35%;
-                transform: rotate(340deg);
-                display: flex;
-                position: absolute;
-                left: -200px;
-                // top:100px
-            }
             .self {
-                width: 70%;
-                background:url('../photo/compp.png') no-repeat;
+                width: 80%;
+                // background:url('../photo/compp.png') no-repeat;
+                // border:6px solid #000;
                 background-size: 100%;
                 background-position-y: px;
                 display: flex;
-                // padding-top: 22%;
-                // top: 0%;
-                // position: relative;
+                padding:5% 10% 0 8%;
+                box-sizing: border-box;
+                
+               
                 z-index: 2;
-                min-height: 60vh;
+                min-height: 73vh;
+                
                 h1{
-                    // position: absolute;
-                    // padding: 0 370px;
-                    // top: 200px;
-                    // margin-top: 100px;
-                    text-align: center;
-                    font-size: 25px;
-                    color:grey;
+                    font-size: 28px;
+                    // color:grey;
+                    color: white;
+                        text-shadow: 
+                        -1px 0 #333, 
+                        0 1px #333, 
+                        1px 0 #333, 
+                        0 -1px #333;
+                    letter-spacing: 4px;
+
                     a{
-                        font-size:35px;
+                        text-shadow: none;
+                        font-size:45px;
                         color:black;
+                        // color: white;
+                        // text-shadow: 
+                        // -1px 0 #333, 
+                        // 0 1px #333, 
+                        // 1px 0 #333, 
+                        // 0 -1px #333;
+                        // letter-spacing: 10px;
                     }
+                }
+                h2{
+                    text-align: left;
+                    padding: 46px 0 30px;
+                    text-decoration: 3px underline;
+                    text-decoration-color: rgba(95, 158, 160, 0.603);
                 }
             
                .two{
-                   padding-left: -300px;
-                .about{
-                    padding-top: 19%;
-                   
-                    h2{
-                        padding-top: 30px;
-                        padding-bottom: 30px;
-                        padding-right: 200px;
-                        text-decoration: 3px underline;
-                        text-decoration-color: rgba(95, 158, 160, 0.603);
+                    .about{
+                        padding-top: 0%;
+                        // margin: 0 80px;
+                        line-height: 35px;
+                        font-size: 18px;
                     }
-                    // margin: 0 80px;
-                    line-height: 35px;
-                    font-size: 18px;
-             
+                    .education{
+                        position: relative;
+                        line-height: 35px;
+                        font-size: 18px;
+                    }
                     .icon{
                         // display: none;
-                        padding-left: 170px;
+                        padding-left: 0;
                         height: 20px;
                         position: relative;
                     }
-            
                 }
-                .education{
-                    position: relative;
-                    // padding-top: 19%;
-                    h2{padding-bottom: 30px;
-                        text-decoration: 3px underline;
-                        text-decoration-color: rgba(95, 158, 160, 0.603);
-                    }
-                    line-height: 35px;
-                    font-size: 18px;
-                    // margin: 0 80px;
-             
-                    .icon{
-                        // display: none;
-                        padding-left: 170px;
-                
-                        height: 20px;
-                        position: relative;
-                    }
-            
-                }
-                
-            }
-        }
+        
                 .skill{
-                    padding-top: 10%;
+                    padding-top: 3%;
                     position: absolute;
-                    left: 70%;
+                    left: 60%;
                     h2{padding-bottom: 30px;
                         text-decoration: 3px underline;
                         text-decoration-color: rgba(95, 158, 160, 0.603);
@@ -515,17 +524,18 @@
                     line-height: 35px;
                     font-size: 18px;
                     
-                        .icon{
-                            // display: none;
-            
-                            height: 20px;
-                            position: relative;
-                        }
+                    .icon{
+                        // display: none;
+        
+                        height: 20px;
+                        position: relative;
+                    }
                     
                 }
+            }
                 
         }
-
+    }
 
         // ------------------------------------세번째 페이지
         .s2{
@@ -533,12 +543,13 @@
                 text-align: center;
                 padding-bottom: 10px;
                 color: white;
-                font-size: 20px;
-                text-shadow: 
-                -1px 0 #333, 
-                0 1px #333, 
-                1px 0 #333, 
-                0 -1px #333;
+                font-size: 40px;
+                // letter-spacing: 100px;
+                // text-shadow: 
+                // -1px 0 #333, 
+                // 0 1px #333, 
+                // 1px 0 #333, 
+                // 0 -1px #333;
             }
             .port{
                 .site{
@@ -551,26 +562,46 @@
                     height: 73vh;
                     // height:80%;
                     padding: 3% 6rem;
-                    border-style: solid;
-                    border-width: 6px;
-                    >div{width:100%;}
-                    .workpage{
-                        text-align: center;
-                        font-size: 40px;
-                        padding-top: 100px;
+                    // border-style: solid;
+                    // border-width: 6px;
+                    div{
                         width:100%;
                     }
+                    .workpage{
+                        text-align: center;
+                        padding-top: 100px;
+                        width:100%;
+                        color: white;
+                        font-size: 4em;
+                        letter-spacing: 15px;
+                        text-shadow: 
+                        -2px 0 #333, 
+                        0 2px #333, 
+                        1px 0 #333, 
+                        0 -1px #333;
+                        img{
+                            // position: absolute;
+                            width: 510px;
+                            // left:10%;
+                            // &:hover{
+                            //     opacity: 90%;
+                            // }
+                        }
+                    }
                     .fp{
-                        padding: 3% 0;
+                        padding: 2% 0;
                         width: 100%;
                         display: flex;
                         width:100%;
                         img{
-                            padding: 20px;
+                            padding: 10px;
                             // border-style:dashed;
                             border-color: black;
                             border-width: 5px;
-                            width: 50%;
+                            width: 90%;
+                            &:hover{
+                                opacity: 80%;
+                            }
                             
                         }
                         a{
@@ -587,15 +618,18 @@
                         }
                     }
                     .sp{
-                        padding: 3% 0;
+                        padding: 2% 0;
                         width: 100%;
                         display: flex;
                         img{
-                            padding: 20px;
+                            padding: 10px;
                             // border-style: dashed;
                             border-color: black;
                             border-width: 5px;
-                            width: 50%;
+                            width: 90%;
+                            &:hover{
+                                opacity: 80%;
+                            }
                         }
                         a{
                             padding-top: 4%;
@@ -611,15 +645,18 @@
                         }
                     }
                     .tp{
-                        padding: 3% 0;
+                        padding: 2% 0;
                         width: 100%;
                         display: flex;
                         img{
-                            padding: 20px;
+                            padding: 10px;
                             // border-style: dashed;
                             border-color: black;
                             border-width: 5px;
-                            width: 50%;
+                            width: 90%;
+                            &:hover{
+                                opacity: 80%;
+                            }
                         }
                         a{
                             padding-top: 4%;
@@ -681,6 +718,10 @@
                                 position: relative;
                                 left: 650px;
                                 top: 400px;
+                                cursor: pointer;
+                                &:hover{
+                                    color:rgba(95, 158, 160, 0.603);
+                                }
                                 
                                 
                             }
